<resources>
    <string name="app_name">FaceHaha</string>
    <string name="action_settings">Settings</string>
    <string name="start">Boom!</string>
    <string name="guide_one">Pick one picture from gallery</string>
    <string name="guide_two">Or just a shot with the camera</string>
    <string name="guide_three">Choose a face you like </string>
    <string name="guide_four">And gently press the Detect button </string>
    <string name="guide_five">Save this amazing moment</string>
    <string name="compose_shortcut_short_label1">camera</string>
    <string name="compose_shortcut_long_label1">camera</string>
    <string name="compose_disabled_message1">disbaled shortcut</string>
    <string name="compose_shortcut_long_label2">guide</string>
    <string name="compose_shortcut_long_label3">pick</string>
</resources>
